Prevent long sitenames from overflowing out of column and stuff
Missed some max-width stuff with the flex.

Bug: T232411

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -57,7 +57,7 @@ body {
 }
 
 #p-logo-text {
-	width: @column-left-size;
+	max-width: @column-left-size;
 	text-align: center;
 	line-height: 1;
 
